adding modules and routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
 <!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<app-navbar></app-navbar>
+<app-navbar class="row"></app-navbar>
+<div class="container"><router-outlet></router-outlet></div>
