--- a/src/app/components/pages/character/character-list/character-list.component.html
+++ b/src/app/components/pages/character/character-list/character-list.component.html
@@ -6,7 +6,10 @@
             </div>
             <div class="card-body">
                 <h5>{{character.name}}</h5>
+
             </div>
         </div>
     </div>
+    <div *ngIf= "characters.length <= 0">No results</div>
+    <button class="btn btn-dark">Go up </button>
 </div>
