--- a/src/app/components/pages/character/character-list/character-list.component.html
+++ b/src/app/components/pages/character/character-list/character-list.component.html
@@ -1,18 +1,17 @@
-<div class="justify-content-center align-items-center">
+<div class="justify-content-center align-items-center ">
     <div class="card-columns row justify-content-center align-items-center">
-        <div class="card m-3 p-0" *ngFor="let character of characters">
+        <div class="card m-3 p-0 " *ngFor="let character of characters">
             <div>
                 <img class="card-img-top" [src]="character.image" alt="">
             </div>
-            <div class="card-body w-100 p-0">
-                <h5 class="card-title">{{character.name | slice: 0:15}}</h5>
-                <ul class="list-group flush p-0">
-                    <li class="list-group-item p-0">status: {{character.status}}</li>
-                    <li class="list-group-item p-0">gender: {{character.gender}}</li>
-                    <li class="list-group-item p-0">species: {{character.species}}</li>
-                    <li class="list-group-item p-0">created: {{character.created | date}}</li>
+            <div class="card-body w-100 p-0" >
+                <h5 class="card-title m-0">{{character.name | slice: 0:10}}</h5>
+                <ul class="list-group flush bg-dark m-0" >
+                    <li class="list-group-item p-0 ">status: {{character.status}}</li>
+                    <li class="list-group-item p-0 ">gender: {{character.gender}}</li>
+                    <li class="list-group-item p-0 ">species: {{character.species}}</li>
                 </ul>
-
+                <button btn btn-primary>show details</button>
             </div>
         </div>
     </div>
