--- a/src/app/components/pages/character/character-details/character-details.component.html
+++ b/src/app/components/pages/character/character-details/character-details.component.html
@@ -1,1 +1,46 @@
-<p>character-details works!</p>
+<!-- <div class="justify-content-center align-items-center  *ngIf=" character$ | async as character">
+    <div class="card-columns row justify-content-center align-items-center">
+        <div class="card m-3 p-0 ">
+            <div>
+                <img class="card-img-top" [src]="character.image" alt="">
+            </div>
+            <div class="card-body w-100 p-0">
+                <a [routerLink]="['/character-details', character.id]">
+                    <h5 class="card-title m-0">{{character.name | slice: 0:13}}</h5>
+                </a>
+                <ul class="list-group flush bg-dark m-0">
+                    <li class="list-group-item p-0 ">status: {{character.status}}</li>
+                    <li class="list-group-item p-0 ">gender: {{character.gender}}</li>
+                    <li class="list-group-item p-0 ">species: {{character.species}}</li>
+                </ul>
+                <button class="btn btn-primary" [routerLink]="['/character-details', character]">show details</button>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="characters.length <= 0">No results</div>
+    <button (click)='goback()' class="btn btn-primary">Go back </button>
+</div> -->
+<div class="row justify-content-center mt-3" *ngIf="character$ | async as character">
+    <div class="col-xs-12 col-sm-6 col-md-6 justify-content-center">
+        <!-- empieza card -->
+        <div class="card m-3 p-0 ">
+            <div>
+                <img class="card-img-top" [src]="character.image" alt="">
+            </div>
+            <div class="card-body w-100 p-0">
+                <a [routerLink]="['/character-details', character.id]">
+                    <h5 class="card-title m-0">{{character.name | slice: 0:13}}</h5>
+                </a>
+                <ul class="list-group flush bg-dark m-0">
+                    <li class="list-group-item p-0 ">status: {{character.status}}</li>
+                    <li class="list-group-item p-0 ">gender: {{character.gender}}</li>
+                    <li class="list-group-item p-0 ">species: {{character.species}}</li>
+                </ul>
+                <button class="btn btn-primary" [routerLink]="['/character-details', character.id]">show details</button>
+            </div>
+        </div>
+    </div>
+  </div>
+  <button (click)="goBack()" class="btn btn-primary btn-lg mt-3">
+    Back
+  </button>
